# rust-leds

./: Cargo.toml  README.md  build.rs  cfg.toml  espflash.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: README.md
src/: cert.crt  http_client.rs  http_server.cs  leds.rs  main.rs  motor.rs  wifi.rs
