[package]
name = "rust-leds"
version = "0.1.0"
authors = ["Greg Raymond <graymond2007@gmail.com>"]
edition = "2021"
resolver = "2"
build = "build.rs"
rust-version = "1.82"

[[bin]]
name = "rust-leds"
harness = false    # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.49" }
embedded-svc = { version = "0.28", default-features = false }
smart-leds = "0.4.0"
anyhow = "1.0.86"
toml-cfg = "0.2.0"
serde_json = "1.0.121"
chrono = "0.4.38"
chrono-tz = "0.10.0"

[build-dependencies]
embuild = { version = "0.32.0", features = ["elf"] }
# cc = "=1.1.30"                                       #"=1.1.30"                                          # Version "1.1.30" necessary until a new version of `esp-idf-sys` is released
# python3-sys = "0.7.1"

[dev-dependencies]
anyhow = "1"
esp-idf-sys = { version = "0.35", features = ["binstart"] }
futures = "0.3"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
postcard = "1"
async-io = "2"
